--- a/app/src/main/res/layout/level.xml
+++ b/app/src/main/res/layout/level.xml
@@ -4,4 +4,5 @@
     android:id="@+id/level_btn"
     android:layout_margin="5dp"
     android:background="@drawable/levels_color"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_centerHorizontal="true"/>
