--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/Main_layout"
-    android:background="@drawable/color_change">
+    android:background="@drawable/color_change"
+    android:layoutDirection="ltr">
 
     <ImageView
         android:id="@+id/game_logo"
         android:layout_width="360dp"
         android:layout_height="324dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/makeiteven_v2" />
+        android:src="@drawable/makeiteven_v2"
+        android:contentDescription=""/>
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
@@ -39,10 +41,11 @@
     android:layout_height="50dp"
     android:layout_margin="10dp"
     android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
     android:background="@drawable/setting_btn"
     android:src="@drawable/ic_settings_black_24dp"
-    android:id="@+id/setting_btn"/>
+    android:id="@+id/setting_btn"
+    android:contentDescription=""/>
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
