--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -7,6 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:layout_centerHorizontal="true"
-    android:padding="10dp"/>
+    android:layout_centerHorizontal="true"/>
 </RelativeLayout>
