--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,34 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameActivity"
-    android:layoutDirection="ltr">
+    android:layoutDirection="ltr"
+    tools:context=".GameActivity">
 
-    <TextView
-        android:id="@+id/score_tv"
+    <LinearLayout
+        android:id="@+id/arcade_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/upper_layout"
         android:layout_centerHorizontal="true"
-        android:text="Score:"
-        android:textSize="30sp"
-        android:layout_below="@id/the_number"
-        android:visibility="gone"/>
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/timer_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text=""
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/score_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="    Score: "
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/actual_score_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="30sp" />
+
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/the_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/arcade_container"
         android:layout_centerHorizontal="true"
-        android:textSize="30sp"
-        android:layout_below="@id/upper_layout"/>
+        android:textSize="30sp" />
 
 
     <LinearLayout
         android:id="@+id/btn_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/the_number"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/timer_txt"
         android:orientation="vertical"
         android:padding="4dp">
 
@@ -40,21 +65,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tbgChildSpacingForLastRow="align"
+
             app:tbgRowSpacing="5dp">
 
             <ToggleButton
                 android:id="@+id/btn1"
-                android:textColor="#fff"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
                 android:fontFamily="@font/robotoslab_bold"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
+                android:textColor="#fff"
                 android:textOff=""
                 android:textOn=""
-                android:textSize="40sp"
-                android:stateListAnimator="@null"/>
+                android:textSize="40sp" />
 
             <ToggleButton
                 android:id="@+id/btn2"
@@ -64,11 +90,11 @@
                 android:background="@drawable/game_qube_btns"
                 android:fontFamily="@font/robotoslab_bold"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
+                android:textColor="#fff"
                 android:textOff=""
                 android:textOn=""
-                android:textSize="40sp"
-                android:stateListAnimator="@null"
-                android:textColor="#fff"/>
+                android:textSize="40sp" />
 
             <ToggleButton
                 android:id="@+id/btn3"
@@ -78,11 +104,11 @@
                 android:background="@drawable/game_qube_btns"
                 android:fontFamily="@font/robotoslab_bold"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
+                android:textColor="#fff"
                 android:textOff=""
                 android:textOn=""
-                android:textSize="40sp"
-                android:stateListAnimator="@null"
-                android:textColor="#fff"/>
+                android:textSize="40sp" />
 
             <ToggleButton
                 android:id="@+id/btn4"
@@ -92,27 +118,26 @@
                 android:background="@drawable/game_qube_btns"
                 android:fontFamily="@font/robotoslab_bold"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
+                android:textColor="#fff"
                 android:textOff=""
                 android:textOn=""
-                android:textSize="40sp"
-                android:stateListAnimator="@null"
-                android:textColor="#fff"/>
+                android:textSize="40sp" />
         </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/operators_layot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btn_layout"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:id="@+id/operators_layot">
+        android:layout_marginTop="60dp">
 
         <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
             android:id="@+id/group_choices_of_operators"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <ToggleButton
                 android:id="@+id/plus"
@@ -142,6 +167,7 @@
                 android:tag="mul"
                 android:textOff=""
                 android:textOn="" />
+
             <ToggleButton
                 android:id="@+id/div"
                 android:layout_width="60dp"
@@ -155,63 +181,55 @@
 
         </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
     </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/upper_layout">
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:background="@color/Transparent"
-        android:src="@drawable/ic_back"
-        android:id="@+id/game_back_btn"
-        android:contentDescription=""/>
-    <RelativeLayout
+
+    <LinearLayout
+        android:id="@+id/upper_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
         <ImageButton
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_question_mark"
-            android:layout_toStartOf="@id/restart_level"
+            android:id="@+id/game_back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
             android:background="@color/Transparent"
             android:contentDescription=""
-            android:id="@+id/hint_btn"/>
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:background="@color/Transparent"
-            android:src="@drawable/restart_img"
-            android:layout_gravity="center"
-            android:id="@+id/restart_level"
-            android:layout_alignParentEnd="true"
-            />
-    </RelativeLayout>
+            android:src="@drawable/ic_back" />
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/hint_btn"
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@id/restart_level"
+                android:background="@color/Transparent"
+                android:contentDescription=""
+                android:src="@drawable/ic_question_mark" />
+
+            <ImageButton
+                android:id="@+id/restart_level"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
+                android:background="@color/Transparent"
+                android:src="@drawable/restart_img" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
     <ImageButton
         android:id="@+id/start_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/operators_layot"
-        android:layout_margin="10dp"
-        android:src="@drawable/ic_play_button"
-        android:background="@color/Transparent"
-        />
-
-    <TextView
-        android:id="@+id/timer_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/score_tv"
         android:layout_centerHorizontal="true"
-        android:padding="10dp"
-        android:text="TextView"
-        android:textSize="24sp"
-        tools:text="10:00"
-        android:visibility="invisible"/>
+        android:layout_marginBottom="10dp"
+        android:background="@color/Transparent"
+        android:src="@drawable/ic_play_button" />
 
 
 </RelativeLayout>
