--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -2,21 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
+        android:id="@+id/HigeScore_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/HigeScore"
-        android:textSize="50sp"
-        android:id="@+id/HigeScore_tv"/>
+        android:textSize="50sp" />
 
-<ListView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:id="@android:id/list"
-    android:layout_below="@+id/HigeScore_tv"
-    android:layout_margin="30dp">
-</ListView>
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/HigeScore_tv"
+        android:layout_centerInParent="true"
+        android:layout_margin="30dp"/>
 
 </RelativeLayout>
