add "play stage mode button to end of arcade activity"

--- a/app/src/main/res/layout/activity_end_of_arcade_game.xml
+++ b/app/src/main/res/layout/activity_end_of_arcade_game.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="60dp"
         android:padding="20dp"
         android:text="TimesUp!!"
         android:textSize="50sp" />
@@ -63,11 +63,24 @@
         android:textAllCaps="false"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/play_stage_mode_btn"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/stage_btn"
+        android:text="Play stage mode"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <ImageButton
         android:id="@+id/scoreBoard_ib"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:layout_marginStart="10dp"
         android:background="@color/Transparent"
         android:scaleType="fitCenter"
