--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:padding="20dp"
-        android:text="Make it even"
+        android:text="Make it Even"
         android:textSize="50dp"
         android:textColor="@color/primaryTextColor"
         android:textStyle="italic" />
