--- a/app/src/main/res/layout/level_cell.xml
+++ b/app/src/main/res/layout/level_cell.xml
@@ -30,12 +30,12 @@
 
     <ImageView
         android:id="@+id/lock_iv"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignEnd="@id/level_btn"
         android:layout_alignBottom="@id/level_btn"
         android:layout_marginBottom="2dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/ic_lock" />
+        android:background="@drawable/lock" />
 
 </RelativeLayout>
